--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Docs/Database/Apuntes.pdf
 Docs/Database/LibroBasesDatos.pdf
 Docs/Database/Jerarquias.pdf
+examples/DATABASE/PHP files (JSON) and SQL/scripts sql/Esquemas E-R y Relacional.pdf
