Contenido de la tarjeta SD
Contenido exacto de la tarjeta SD, para copiar directamente.
Incluye las imágenes en binario y dentro de los directorios correspondientes, y el directorio donde se guardarán los ficheros CSV y TXT.

La estructura de ficheros no se debe modificar, pues las rutas en el código dejarían de funcionar.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Docs/Database/LibroBasesDatos.pdf
 Docs/Database/Jerarquias.pdf
 examples/DATABASE/PHP files (JSON) and SQL/scripts sql/Esquemas E-R y Relacional.pdf
 Web/Diseño de API REST para app frontend de APISmartCloth.pdf
+v2.1 - src/versiones_SM.zip
