--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Docs/Database/Jerarquias.pdf
 examples/DATABASE/PHP files (JSON) and SQL/scripts sql/Esquemas E-R y Relacional.pdf
 Web/Diseño de API REST para app frontend de APISmartCloth.pdf
 v2.1 - src/versiones_SM.zip
+v2.1 - src/versiones_SM.zip
