CameraWebServer_CAM_PLUS

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ examples/DATABASE/PHP files (JSON) and SQL/scripts sql/Esquemas E-R y Relacional
 Web/Diseño de API REST para app frontend de APISmartCloth.pdf
 v2.1 - src/versiones_SM.zip
 v2.1 - src/versiones_SM.zip
+/examples/ESP32/STREAMING SERVER AND PYTHON ACCESS/GZIP-HTML
