Comentarios Streaming Server AutoFocus

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Web/Diseño de API REST para app frontend de APISmartCloth.pdf
 v2.1 - src/versiones_SM.zip
 v2.1 - src/versiones_SM.zip
 /examples/ESP32/STREAMING SERVER AND PYTHON ACCESS/GZIP-HTML
+/examples/new-ESP32/otros ejemplos/CameraWebServer_staticIP
